--- a/index.html
+++ b/index.html
@@ -3,77 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno</title>
+    <title>MasterUno Ultimate</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
 
     <div id="loginScreen" class="screen">
         <div class="main-box">
-            <h1 class="logo-title">MASTER UNO</h1>
-            <input type="text" id="nickInput" placeholder="Inserisci Nickname...">
-            <div id="loginBtn" class="btn-yellow">ENTRA</div>
+            <h1 class="logo">MASTER UNO</h1>
+            <input type="text" id="nickInput" placeholder="Inserisci il tuo nome...">
+            <button class="btn-yellow" onclick="app.handleLogin()">ENTRA NEL GIOCO</button>
         </div>
     </div>
 
     <div id="startScreen" class="screen hidden">
         <div class="main-box">
             <h2 id="welcomeText"></h2>
-            <div class="btn-yellow" onclick="showSettings()">IMPOSTAZIONI</div>
-            <div id="startGameBtn" class="btn-yellow">INIZIA PARTITA</div>
+            <button class="btn-yellow" onclick="app.showSettings()">IMPOSTAZIONI</button>
+            <button class="btn-yellow" onclick="app.startGame()">INIZIA PARTITA</button>
         </div>
     </div>
 
     <div id="settingsScreen" class="screen hidden">
         <div class="main-box">
-            <h3>REGOLE GIOCO</h3>
-            <div class="setting-item">
-                <label>Regola 0-7</label>
-                <input type="checkbox" id="rule07">
-            </div>
-            <div class="setting-item">
-                <label>Combo Numeri</label>
-                <input type="checkbox" id="ruleMulti">
-            </div>
-            <div class="setting-item">
-                <label>Numero Bot:</label>
-                <select id="maxPlayersSelect">
-                    <option value="2">1 Bot</option>
-                    <option value="3">2 Bot</option>
-                    <option value="4" selected>3 Bot</option>
+            <h3>REGOLE</h3>
+            <div class="setting-row">
+                <label>Numero di Bot:</label>
+                <select id="botCount">
+                    <option value="1">1 Bot</option>
+                    <option value="2">2 Bot</option>
+                    <option value="3" selected>3 Bot</option>
                 </select>
             </div>
-            <div class="btn-yellow" onclick="hideSettings()">SALVA E TORNA</div>
+            <div class="setting-row">
+                <label>Regola 0-7: <input type="checkbox" id="rule07Check"></label>
+            </div>
+            <button class="btn-yellow" onclick="app.saveSettings()">SALVA E TORNA</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen hidden">
-        <div id="turnIndicator">TURNO DI...</div>
+        <div id="turnIndicator">CARICAMENTO...</div>
         
         <div id="otherPlayers" class="opponents-row"></div>
         
         <div id="centerArea">
-            <div id="deckArea"></div> <div id="discardPile"></div> </div>
+            <div id="deckArea" class="card card-back" onclick="app.userDraw()">
+                <span>MAZZO</span>
+            </div>
+            <div id="discardPile"></div>
+        </div>
 
         <div class="player-zone">
             <div class="emoji-bar">
-                <span onclick="sendChat('🔥')">🔥</span>
-                <span onclick="sendChat('😂')">😂</span>
-                <span onclick="sendChat('🃏')">🃏</span>
+                <span onclick="app.toast('😂')">😂</span>
+                <span onclick="app.toast('🤫')">🤫</span>
+                <span onclick="app.toast('🔥')">🔥</span>
             </div>
             <div id="playerHand" class="hand"></div>
         </div>
     </div>
 
-    <div id="colorPicker" class="screen hidden" style="background:rgba(0,0,0,0.9)">
+    <div id="colorPicker" class="screen hidden" style="background:rgba(0,0,0,0.9); z-index:1000;">
         <div class="main-box">
             <h3>SCEGLI COLORE</h3>
             <div class="color-grid">
-                <div class="color-btn" style="background:red" onclick="setWildColor('red')"></div>
-                <div class="color-btn" style="background:blue" onclick="setWildColor('blue')"></div>
-                <div class="color-btn" style="background:green" onclick="setWildColor('green')"></div>
-                <div class="color-btn" style="background:yellow" onclick="setWildColor('yellow')"></div>
+                <div onclick="app.setWildColor('red')" class="c-btn" style="background:#c0392b"></div>
+                <div onclick="app.setWildColor('blue')" class="c-btn" style="background:#2980b9"></div>
+                <div onclick="app.setWildColor('green')" class="c-btn" style="background:#27ae60"></div>
+                <div onclick="app.setWildColor('yellow')" class="c-btn" style="background:#f1c40f"></div>
             </div>
         </div>
     </div>
