--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MasterUno Pro</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
 
@@ -14,7 +13,7 @@
     <div id="loginScreen" class="screen">
         <div class="main-box">
             <h1 class="logo">MASTER UNO</h1>
-            <input type="text" id="nickInput" placeholder="Tuo Nick...">
+            <input type="text" id="nickInput" placeholder="Tuo Nickname...">
             <button class="btn-main" onclick="game.login()">ENTRA</button>
         </div>
     </div>
@@ -23,16 +22,34 @@
         <div class="main-box">
             <h2 id="welcomeText"></h2>
             <div class="peer-box" onclick="game.copyId()">
-                <span>ID: </span><b id="myPeerIdDisplay">---</b>
-                <small>(Clicca per copiare)</small>
+                ID: <b id="myPeerIdDisplay">---</b>
             </div>
-            <button class="btn-main" onclick="game.startGame()">GIOCA CONTRO BOT</button>
+            <button class="btn-main" onclick="game.startGame()">GIOCA ORA</button>
             <button class="btn-sub" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
         </div>
     </div>
 
+    <div id="settingsScreen" class="screen hidden">
+        <div class="main-box">
+            <h2 class="logo">REGOLE</h2>
+            <div class="setting-item">
+                <label>Bot:</label>
+                <select id="botSelect">
+                    <option value="1">1 Bot</option>
+                    <option value="2">2 Bot</option>
+                    <option value="3" selected>3 Bot</option>
+                </select>
+            </div>
+            <div class="setting-item">
+                <label>Regola 0-7:</label>
+                <input type="checkbox" id="rule07Check">
+            </div>
+            <button class="btn-main" onclick="game.saveSettings()">SALVA</button>
+        </div>
+    </div>
+
     <div id="gameArea" class="screen hidden">
-        <div id="statusInfo">TOCCA A TE</div>
+        <div id="statusInfo">CARICAMENTO...</div>
         
         <div id="playerTop" class="player-slot pos-top"></div>
         <div id="playerLeft" class="player-slot pos-left"></div>
@@ -40,7 +57,7 @@
 
         <div class="table-center">
             <div id="directionIndicator"></div>
-            <div id="deck" class="card card-back deck-hover" onclick="game.userDraw()">
+            <div id="deck" class="card card-back" onclick="game.userDraw()">
                 <div class="card-logo">MASTER<span>UNO</span></div>
             </div>
             <div id="discard"></div>
@@ -53,8 +70,8 @@
 
     <div id="winScreen" class="screen hidden">
         <div class="main-box">
-            <h1 id="winMessage">HAI VINTO!</h1>
-            <button class="btn-main" onclick="location.reload()">TORNA AL MENU</button>
+            <h1 id="winMessage">VITTORIA!</h1>
+            <button class="btn-main" onclick="location.reload()">MENU</button>
         </div>
     </div>
 
