--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
-
     <div id="toast" class="toast hidden"></div>
 
     <div id="loginScreen" class="screen">
@@ -24,11 +23,10 @@
             <h2 id="welcomeText"></h2>
             <div class="peer-box" onclick="game.copyId()">
                 ID: <b id="myPeerIdDisplay">---</b>
-                <br><small>(Tocca per copiare)</small>
             </div>
-            <button class="btn-main" onclick="game.startGame()">GIOCA ORA</button>
+            <button class="btn-main" onclick="game.startGame()">INIZIA PARTITA</button>
             <div class="multi-zone">
-                <input type="text" id="joinId" placeholder="Inserisci ID Amico...">
+                <input type="text" id="joinId" placeholder="ID Amico...">
                 <button class="btn-sub" onclick="game.connectToPeer()">CONNETTI AMICO</button>
             </div>
             <button class="btn-sub" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
@@ -41,9 +39,9 @@
             <div class="setting-item">
                 <label>Giocatori Totali:</label>
                 <select id="playerLimit">
-                    <option value="2">2 Giocatori</option>
-                    <option value="3">3 Giocatori</option>
-                    <option value="4" selected>4 Giocatori</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4" selected>4</option>
                 </select>
             </div>
             <div class="setting-item">
@@ -56,19 +54,16 @@
 
     <div id="gameArea" class="screen hidden">
         <div id="statusInfo">TURNO DI...</div>
-        
         <div id="playerTop" class="player-slot pos-top"></div>
         <div id="playerLeft" class="player-slot pos-left"></div>
         <div id="playerRight" class="player-slot pos-right"></div>
-
         <div class="table-center">
-            <div id="directionIndicator" class="dir-cw"></div>
+            <div id="directionIndicator"></div>
             <div id="deck" class="card card-back" onclick="game.userDraw()">
                 <div class="card-logo">MASTER<span>UNO</span></div>
             </div>
             <div id="discard"></div>
         </div>
-
         <div class="player-bottom">
             <div id="myHand" class="hand"></div>
         </div>
@@ -89,7 +84,6 @@
             <div onclick="game.setWildColor('yellow')" class="c-choice yellow"></div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
