--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Ultimate</title>
+    <title>MasterUno Pro</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
@@ -11,38 +11,42 @@
     <div id="toast" class="toast hidden"></div>
 
     <div id="loginScreen" class="screen">
-        <div class="main-box">
-            <h1 class="logo">MASTER UNO</h1>
-            <input type="text" id="nickInput" placeholder="Tuo Nickname...">
-            <button class="btn-main" onclick="game.login()">ENTRA</button>
+        <div class="glass-box">
+            <h1 class="logo-main">MASTER<span>UNO</span></h1>
+            <p>Scegli un'identità per dominare il tavolo</p>
+            <input type="text" id="nickInput" placeholder="Inserisci il tuo Nickname...">
+            <button class="btn-glow" onclick="game.login()">ENTRA NEL CLUB</button>
         </div>
     </div>
 
     <div id="menuScreen" class="screen hidden">
         <div class="main-box">
             <h2 id="welcomeText"></h2>
-            <div class="id-display" onclick="game.copyId()">IL TUO ID: <b id="myId">---</b></div>
-            <div class="multi-box">
-                <input type="text" id="joinId" placeholder="ID Amico...">
-                <button class="btn-main" onclick="game.connectToPeer()">INVITA/CONNETTI</button>
+            <div class="id-badge" onclick="game.copyId()">
+                <span>ID SESSIONE</span>
+                <b id="myId">---</b>
             </div>
-            <button class="btn-sub" onclick="game.startGame()">INIZIA PARTITA</button>
-            <button class="btn-sub" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+            <div class="multi-zone">
+                <input type="text" id="joinId" placeholder="Incolla ID Amico...">
+                <button class="btn-main" onclick="game.connectToPeer()">SFIDA AMICO</button>
+            </div>
+            <button class="btn-sub" onclick="game.startGame()">PARTITA LOCALE</button>
+            <button class="btn-sub" onclick="game.goTo('settingsScreen')">REGOLAMENTO</button>
         </div>
     </div>
 
     <div id="settingsScreen" class="screen hidden">
         <div class="main-box">
-            <h2 class="logo">REGOLE</h2>
-            <div class="opt"><label>Giocatori:</label><select id="playerLimit"><option value="2">2</option><option value="3">3</option><option value="4" selected>4</option></select></div>
-            <div class="opt"><label>Regola 0-7:</label><input type="checkbox" id="rule07" checked></div>
-            <div class="opt"><label>Pesca a strascico:</label><input type="checkbox" id="drawUntilPlay" checked></div>
-            <button class="btn-main" onclick="game.goTo('menuScreen')">SALVA</button>
+            <h2>REGOLE</h2>
+            <div class="row">Giocatori: <select id="playerLimit"><option value="2">2</option><option value="4" selected>4</option></select></div>
+            <div class="row">Somma +2/+4: <input type="checkbox" id="stacking" checked></div>
+            <div class="row">Regola 0-7: <input type="checkbox" id="rule07" checked></div>
+            <button class="btn-main" onclick="game.goTo('menuScreen')">CONFERMA</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen hidden">
-        <div id="turnIndicator">CARICAMENTO...</div>
+        <div id="turnIndicator">TURNO DI...</div>
         
         <div id="bot-left" class="player-slot pos-left"></div>
         <div id="bot-top" class="player-slot pos-top"></div>
@@ -50,14 +54,24 @@
 
         <div class="table-center">
             <div id="directionRing"></div>
-            <div id="deck" class="card card-back" onclick="game.userDraw()">
-                <div class="card-logo">MASTER<span>UNO</span></div>
+            <div id="deck" class="card card-back deck-stack" onclick="game.userDraw()">
+                <div class="master-back">MasterUno</div>
             </div>
             <div id="discard"></div>
         </div>
 
+        <div class="chat-bar">
+            <span onclick="game.sendEmoji('😂')">😂</span>
+            <span onclick="game.sendEmoji('🤡')">🤡</span>
+            <span onclick="game.sendEmoji('😡')">😡</span>
+            <span onclick="game.sendEmoji('🃏')">🃏</span>
+        </div>
+
         <div class="player-bottom">
-            <div id="myBadge" class="status-badge side-badge">TU: 7</div>
+            <div id="myStatus" class="player-info-box">
+                <div id="myBadge" class="status-badge">TU: 7</div>
+                <div id="myEmoji" class="emoji-bubble hidden"></div>
+            </div>
             <div id="myHand" class="hand"></div>
         </div>
     </div>
@@ -70,6 +84,8 @@
             <div onclick="game.setWildColor('yellow')" class="c-choice yellow"></div>
         </div>
     </div>
+
+    <div id="animationContainer"></div>
 
     <script src="script.js"></script>
 </body>
